More Formatting options + tests!